[package]
name = "serverless-intro-netlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
lambda_http = { version = "0.8.1", default-features = false, features = [
    "apigw_rest",
] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros"] }
